# multi-agent-ai-with-a2a

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/cisco_intersight/: agent.py  agent_executor.py  card.py  prompts.py  server.py
agents/service_catalog/: agent.py  agent_executor.py  card.py  prompts.py  server.py
agents/supervisor/: agent.py  main.py  tools.py
agents/supervisor/graph/: graph.py
agents/templates/: agent copy.py
client/: __init__.py  cli.py
common/: llm.py
config/: config.py
mcpServers/infra_automation/: mcp_server.py
